knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Id</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>