knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <inlineHelpText>You can store external id here e.g. Position ID from Workday</inlineHelpText>
    <label>Integration Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>