knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Integration Duration (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>