knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/fields/Error_Category__c.field-meta.xml
<CustomField>
    <fullName>Error_Category__c</fullName>
    <label>Error Category</label>
    <type>TextArea</type>
</CustomField>