knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/fields/Error_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Error_Datetime__c</fullName>
    <label>Error Date/Time</label>
    <type>DateTime</type>
</CustomField>