knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/fields/External_System__c.field-meta.xml
<CustomField>
    <fullName>External_System__c</fullName>
    <inlineHelpText>e.g. Qgenda, Workday (be consistent)</inlineHelpText>
    <label>External System Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>