knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/fields/Global_Facility_Id__c.field-meta.xml
<CustomField>
    <fullName>Global_Facility_Id__c</fullName>
    <label>Global Facility Id</label>
    <type>TextArea</type>
</CustomField>