knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/fields/Healthcare_Practitioner_Facility_Id__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Practitioner_Facility_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Healthcare Practitioner Facility Id</label>
    <referenceTo>HealthcarePractitionerFacility</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>