knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/fields/Integration_Name__c.field-meta.xml
<CustomField>
    <fullName>Integration_Name__c</fullName>
    <inlineHelpText>e.g. Workday_Create_Position, Workday_Hire_Employee</inlineHelpText>
    <label>Integration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>