knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <inlineHelpText>e,g, CDC Triggered, Platform Event, SF Reqeust/ Response</inlineHelpText>
    <label>Integration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>