knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/fields/Next_Retry_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Next_Retry_Datetime__c</fullName>
    <label>Next Retry Date/Time</label>
    <type>DateTime</type>
</CustomField>