knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/fields/Related_Record_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Object__c</fullName>
    <label>Related Record Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>