knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/fields/Related_SF_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_SF_Record_Id__c</fullName>
    <inlineHelpText>Record Id from Salesforce if available only primary record Id</inlineHelpText>
    <label>Related SF Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>