knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/fields/Trigger_Source__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Source__c</fullName>
    <label>Trigger Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Qgenda</fullName>
            </value>
            <value>
                <fullName>Workday</fullName>
            </value>
            <value>
                <fullName>Asymbl</fullName>
            </value>
            <value>
                <fullName>Litmos</fullName>
            </value>
            <value>
                <fullName>Datalake</fullName>
            </value>
            <value>
                <fullName>Doximity</fullName>
            </value>
            <value>
                <fullName>PracticeLink</fullName>
            </value>
            <value>
                <fullName>DocCafe</fullName>
            </value>
            <value>
                <fullName>PracticeMatch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>