knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Integration_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Error_Datetime__c</columns>
    <columns>Correlation_Id__c</columns>
    <columns>Related_SF_Record_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Integration_Name__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Name__c</field>
        <operation>equals</operation>
        <value>HIRE_PROVIDERS_QG</value>
    </filters>
    <label>All</label>
</ListView>